--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -245,6 +245,7 @@ custom-button
 	width: 100%;
 	text-align: center;
 	background-color: var(--strong-cyan);
+	
 	border-radius: 15px;
 	margin: 30px auto 0;
 	padding: 20px 0;
@@ -253,6 +254,7 @@ custom-button
 	font-size: 21px;
 	color: var(--very-dark-cyan);
 	font-family: 'Space Mono Bold';
+	/* z-index: 10; */
 }
 
 .calc-reset:hover {
@@ -260,6 +262,15 @@ custom-button
 	background-color: var(--light-grayish-cyan);
 }
 
+.reset-wrapper {
+	width: 100%;
+	/* height: 40px; */
+	position: relative;
+	/* background-color: hsla(183, 100%, 15%, .9) !important; */
+	/* z-index: 1000 !important; */
+	/* background-color: #00494d; */
+	/* background-color: rgba(0, 73, 77, 1); */
+}
 
 @media screen and (min-width: 800px) {
 
